started work on GUI