@@ -1,13 +1,11 @@
 package view;
 
-import commands.ExitCommand;
-import commands.RunExample;
-import controller.Controller;
-import model.PrgState;
-import model.adt.MyDictionary;
-import model.adt.MyHeap;
-import model.adt.MyList;
-import model.adt.MyStack;
+import controller.SelectPorgramController;
+import javafx.application.Application;
+import javafx.fxml.FXMLLoader;
+import javafx.scene.Scene;
+import javafx.scene.layout.VBox;
+import javafx.stage.Stage;
 import model.expression.*;
 import model.statement.*;
 import model.type.BoolType;
@@ -17,8 +15,6 @@ import model.type.StringType;
 import model.value.BoolValue;
 import model.value.IntValue;
 import model.value.StringValue;
-import repository.RepoInterface;
-import repository.Repository;
 
 import java.util.Arrays;
 import java.util.List;
@@ -32,7 +28,7 @@ interface ProgramFromList {
     }
 }
 
-public class Interpreter {
+public class Interpreter extends Application {
     static IStmt example1() {
         return new CompStmt(new VarDeclStmt("v", new IntType()),
                 new CompStmt(new AssignStmt("v", new ValueExp(new IntValue(2))), new PrintStmt(new VarExp("v"))));
@@ -158,6 +154,13 @@ public class Interpreter {
                 new Fork(ProgramFromList.create(Arrays.asList(
                         new WriteHeap("a", new ValueExp(new IntValue(30))),
                         new AssignStmt("v", new ValueExp(new IntValue(32))),
+                        new Fork(ProgramFromList.create(Arrays.asList(
+                                new AssignStmt("v", new ValueExp(new IntValue(50))),
+                                new PrintStmt(new VarExp("v"))
+                        ))),
+                        new NopStmt(),
+                        new NopStmt(),
+                        new NopStmt(),
                         new PrintStmt(new VarExp("v")),
                         new PrintStmt(new ReadHeap(new VarExp("a")))
                 ))),
@@ -175,60 +178,63 @@ public class Interpreter {
         );
     }
 
+    static IStmt crapa_la_typecheck() {
+        return ProgramFromList.create(List.of(
+                new VarDeclStmt("a", new IntType()),
+                new openRFile(new VarExp("a")),
+                new closeRFile(new VarExp("a"))
+        ));
+    }
+
     public static void main(String[] args) {
         IStmt ex1 = example1();
-        PrgState prg1 = new PrgState(new MyStack<>(), new MyDictionary<>(), new MyList<>(), new MyDictionary<>(), new MyHeap(), ex1);
-        RepoInterface repo1 = new Repository(prg1, "log1.txt");
-        Controller ctr1 = new Controller(repo1, true);
         IStmt ex2 = example2();
-        PrgState prg2 = new PrgState(new MyStack<>(), new MyDictionary<>(), new MyList<>(), new MyDictionary<>(), new MyHeap(), ex2);
-        RepoInterface repo2 = new Repository(prg2, "log2.txt");
-        Controller ctr2 = new Controller(repo2, true);
         IStmt ex3 = example3();
-        PrgState prg3 = new PrgState(new MyStack<>(), new MyDictionary<>(), new MyList<>(), new MyDictionary<>(), new MyHeap(), ex3);
-        RepoInterface repo3 = new Repository(prg3, "log3.txt");
-        Controller ctr3 = new Controller(repo3, true);
         IStmt ex4 = example4();
-        PrgState prg4 = new PrgState(new MyStack<>(), new MyDictionary<>(), new MyList<>(), new MyDictionary<>(), new MyHeap(), ex4);
-        RepoInterface repo4 = new Repository(prg4, "log4.txt");
-        Controller ctr4 = new Controller(repo4, true);
         IStmt ex5 = example5();
-        PrgState prg5 = new PrgState(new MyStack<>(), new MyDictionary<>(), new MyList<>(), new MyDictionary<>(), new MyHeap(), ex5);
-        RepoInterface repo5 = new Repository(prg5, "log5.txt");
-        Controller ctr5 = new Controller(repo5, true);
         IStmt ex6 = example6();
-        PrgState prg6 = new PrgState(new MyStack<>(), new MyDictionary<>(), new MyList<>(), new MyDictionary<>(), new MyHeap(), ex6);
-        RepoInterface repo6 = new Repository(prg6, "log6.txt");
-        Controller ctr6 = new Controller(repo6, true);
         IStmt ex7 = example7();
-        PrgState prg7 = new PrgState(new MyStack<>(), new MyDictionary<>(), new MyList<>(), new MyDictionary<>(), new MyHeap(), ex7);
-        RepoInterface repo7 = new Repository(prg7, "log7.txt");
-        Controller ctr7 = new Controller(repo7, true);
         IStmt ex8 = example8();
-        PrgState prg8 = new PrgState(new MyStack<>(), new MyDictionary<>(), new MyList<>(), new MyDictionary<>(), new MyHeap(), ex8);
-        RepoInterface repo8 = new Repository(prg8, "log8.txt");
-        Controller ctr8 = new Controller(repo8, true);
         IStmt ex9 = example9();
-        PrgState prg9 = new PrgState(new MyStack<>(), new MyDictionary<>(), new MyList<>(), new MyDictionary<>(), new MyHeap(), ex9);
-        RepoInterface repo9 = new Repository(prg9, "log9.txt");
-        Controller ctr9 = new Controller(repo9, true);
+        IStmt ex10 = crapa_la_typecheck();
+        launch(args);
 
+//        TextMenu menu = new TextMenu();
+//        menu.addCommand(new ExitCommand("0", "exit"));
+//        menu.addCommand(new RunExample("1", ex1.toString(), ex1));
+//        menu.addCommand(new RunExample("2", ex2.toString(), ex2));
+//        menu.addCommand(new RunExample("3", ex3.toString(), ex3));
+//        menu.addCommand(new RunExample("4", ex4.toString(), ex4));
+//        menu.addCommand(new RunExample("5", ex5.toString(), ex5));
+//        menu.addCommand(new RunExample("6", ex6.toString(), ex6));
+//        menu.addCommand(new RunExample("7", ex7.toString(), ex7));
+//        menu.addCommand(new RunExample("8", ex8.toString(), ex8));
+//        menu.addCommand(new RunExample("9", ex9.toString(), ex9));
+//        menu.addCommand(new RunExample("10", ex10.toString() + "-- typecheck error", ex10));
+//        menu.show();
+    }
 
-        TextMenu menu = new TextMenu();
-        menu.addCommand(new ExitCommand("0", "exit"));
-        menu.addCommand(new RunExample("1", ex1.toString(), ctr1));
-        menu.addCommand(new RunExample("2", ex2.toString(), ctr2));
-        menu.addCommand(new RunExample("3", ex3.toString(), ctr3));
-        menu.addCommand(new RunExample("4", ex4.toString(), ctr4));
-        menu.addCommand(new RunExample("5", ex5.toString(), ctr5));
-        menu.addCommand(new RunExample("6", ex6.toString(), ctr6));
-        menu.addCommand(new RunExample("7", ex7.toString(), ctr7));
-        menu.addCommand(new RunExample("8", ex8.toString(), ctr8));
-        menu.addCommand(new RunExample("9", ex9.toString(), ctr9));
-//        List<PrgState> list = Arrays.asList(prg1, prg2);
-//        List<PrgState> newList = list.stream()
-//                .map(p -> (Callable<PrgState>)(() -> p.oneStep()))
-//                .collect(Collectors.toList());
-        menu.show();
+    @Override
+    public void start(Stage stage) throws Exception {
+        FXMLLoader fxmlLoader = new FXMLLoader(getClass().getResource("xmls/selectProgramScene.fxml"));
+        VBox root = fxmlLoader.load();
+        Scene scene = new Scene(root, 400, 400);
+        scene.getStylesheets().add(getClass().getResource("css/main.css").toExternalForm());
+        SelectPorgramController controller = fxmlLoader.getController();
+        controller.setListItems(List.of(
+                example1(),
+                example2(),
+                example3(),
+                example4(),
+                example5(),
+                example6(),
+                example7(),
+                example8(),
+                example9(),
+                crapa_la_typecheck()));
+
+        stage.setTitle("FXML Welcome");
+        stage.setScene(scene);
+        stage.show();
     }
 }
